[package]
name = "btsnoop-extcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btsnoop = { path = "../btsnoop" }
pcap-file = "1.1.1"
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
nom-derive = "0.10.0"
nom = "7.1.3"
regex = "1.7.1"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
