[package]
name = "btsnoop-extcap"
version = "0.1.0"
edition = "2021"
authors = ["Maurice Lam <mauriceprograms@gmail.com>"]
description = "This library provides parsing capaibilities for btsnoop logs"
documentation = "https://docs.rs/btsnoop-extcap"
readme = "README.md"
repository = "https://github.com/mauricelam/btsnoop-rs/"
license = "MIT"
keywords = ["bluetooth", "btsnoop", "extcap", "wireshark"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r-extcap = { version = "0.2.0" }
btsnoop = { version = "0.2.0", path = "../btsnoop" }
pcap-file = "2.0.0"
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
nom-derive = "0.10.0"
nom = "7.1.3"
regex = "1.7.1"
tokio = { version = "1.25.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.10.0"
async-trait = "0.1.64"
thiserror = "1.0.38"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0.8"
indoc = "2.0.1"
predicates = "2.1.5"
