[package]
name = "btsnoop"
version = "0.1.0"
edition = "2021"
authors = ["Maurice Lam <mauriceprograms@gmail.com>"]
description = "This library provides parsing capaibilities for btsnoop logs"
documentation = "https://docs.rs/btsnoop"
readme = "README.md"
repository = "https://github.com/mauricelam/btsnoop-rs/"
license = "MIT"
keywords = ["bluetooth", "btsnoop", "parser"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-derive = "0.10.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.38"
